BUG:94932

svn path=/trunk/kdeextragear-1/amarok/; revision=392367