src/konquisidebar/universalamarok.cpp
@@ -156,7 +156,7 @@ void UniversalAmarok::updateBrowser(const QString& file)
     browser->begin();
     browser->openURL(file);
     browser->end();
-    browser->setEncoding("utf8", true);
+    browser->setEncoding(KGlobal::locale()->encoding(), true);
 }
 
 
